--- a/.github/workflows/django-tests.yml
+++ b/.github/workflows/django-tests.yml
@@ -27,17 +27,25 @@ jobs:
       uses: actions/cache@v3
       with:
         path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        key: ${{ runner.os }}-pip-${{ hashFiles('gateway/cfcbe/requirements.txt') }}
         restore-keys: |
           ${{ runner.os }}-pip-
     
+    - name: Change to Django project directory
+      run: |
+        cd gateway/cfcbe
+        echo "Current directory: $(pwd)"
+        ls -la
+    
     - name: Install dependencies
+      working-directory: gateway/cfcbe
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install coverage
     
     - name: Create test .env file
+      working-directory: gateway/cfcbe
       run: |
         cat > .env << 'EOL'
         # Django Settings
@@ -90,13 +98,16 @@ jobs:
         EOL
     
     - name: Create test uploads directory
+      working-directory: gateway/cfcbe
       run: mkdir -p uploads
     
     - name: Run Django checks
+      working-directory: gateway/cfcbe
       run: |
         python manage.py check
     
     - name: Run tests with coverage
+      working-directory: gateway/cfcbe
       run: |
         coverage run manage.py test --verbosity=2
         coverage report
@@ -105,6 +116,6 @@ jobs:
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
-        file: ./coverage.xml
+        file: gateway/cfcbe/coverage.xml
         flags: unittests
         fail_ci_if_error: false
