--- a/.github/workflows/django-tests.yml
+++ b/.github/workflows/django-tests.yml
@@ -23,21 +23,27 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     
-    - name: Debug directory structure
+    - name: Show repository structure
       run: |
         echo "Current directory: $(pwd)"
-        find . -name "requirements.txt" -type f
+        echo "Contents of current directory:"
+        ls -la
+        echo "Locating requirements.txt:"
+        find . -name "requirements.txt"
     
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        cd gateway/cfcbe
+        cd gateway/cfcbe || (echo "Directory gateway/cfcbe not found" && exit 1)
+        echo "Current directory after cd: $(pwd)"
+        echo "Contents of current directory:"
+        ls -la
         pip install -r requirements.txt
         pip install coverage python-dotenv
     
     - name: Create test .env file
       run: |
-        cd gateway/cfcbe
+        cd gateway/cfcbe || (echo "Directory gateway/cfcbe not found" && exit 1)
         cat > .env << 'EOL'
         # Django Settings
         DEBUG=True
@@ -90,17 +96,17 @@ jobs:
     
     - name: Create test uploads directory
       run: |
-        cd gateway/cfcbe
+        cd gateway/cfcbe || (echo "Directory gateway/cfcbe not found" && exit 1)
         mkdir -p uploads
     
     - name: Run Django checks
       run: |
-        cd gateway/cfcbe
+        cd gateway/cfcbe || (echo "Directory gateway/cfcbe not found" && exit 1)
         python manage.py check
     
     - name: Run tests with coverage
       run: |
-        cd gateway/cfcbe
+        cd gateway/cfcbe || (echo "Directory gateway/cfcbe not found" && exit 1)
         coverage run manage.py test --verbosity=2
         coverage report
         coverage xml
