--- a/.github/workflows/php-unit-tests.yml
+++ b/.github/workflows/php-unit-tests.yml
@@ -7,6 +7,16 @@ on:
     branches: [ main, develop ]
   workflow_dispatch:
 
+# Explicit permissions for GITHUB_TOKEN
+permissions:
+  contents: read  # only read access is needed for checking out code
+  packages: none  # explicitly deny other permissions
+  actions: none
+  checks: none
+  deployments: none
+  issues: none
+  pull-requests: none
+
 jobs:
   test:
     runs-on: ubuntu-latest
