📝 Updated documentation: added links, PDFs, cleaned structure

--- a/docs/openchsdoc/package.json
+++ b/docs/openchsdoc/package.json
@@ -8,8 +8,8 @@
     "serve": "vitepress serve docs"
   },
   "devDependencies": {
-    "vue": "3.2.44",
-    "vitepress": "1.6.3"
+    "vitepress": "1.6.3",
+    "vue": "3.2.44"
   },
   "pnpm": {
     "peerDependencyRules": {
