--- a/docs/package.json
+++ b/docs/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {
     "vitepress": "1.6.3",
-    "vue": "3.2.44"
+    "vue": "^3.5.13"
   },
   "pnpm": {
     "peerDependencyRules": {
