--- a/gateway/ai_service/requirements.txt
+++ b/gateway/ai_service/requirements.txt
@@ -1,6 +1,6 @@
 annotated-types==0.7.0
 asgiref==3.8.1
-blis==1.3.0
+blis==0.7.11
 catalogue==2.0.10
 certifi==2025.4.26
 charset-normalizer==3.4.2
@@ -9,8 +9,9 @@ cloudpathlib==0.21.1
 confection==0.1.5
 cymem==2.0.11
 Django==5.2.1
+django-cors-headers==4.7.0
 djangorestframework==3.16.0
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl#sha256=0964370218b7e1672a30ac50d72cdc6b16f7c867496f1d60925691188f4d2510
 fasttext-wheel==0.9.2
 ffmpeg-python==0.2.0
 filelock==3.18.0
@@ -32,13 +33,15 @@ mpmath==1.3.0
 murmurhash==1.0.13
 networkx==3.4.2
 numba==0.61.2
-numpy==2.2.6
+numpy==1.26.4
 openai-whisper @ git+https://github.com/openai/whisper.git@dd985ac4b90cafeef8712f2998d62c59c3e62d22
 packaging==25.0
+pathlib_abc==0.1.1
+pathy==0.11.0
 pillow==11.2.1
 preshed==3.0.9
 pybind11==2.13.6
-pydantic==2.11.5
+pydantic==1.10.22
 pydantic_core==2.33.2
 Pygments==2.19.1
 PyYAML==6.0.2
@@ -49,22 +52,22 @@ safetensors==0.5.3
 sentencepiece==0.2.0
 shellingham==1.5.4
 six==1.17.0
-smart-open==7.1.0
-spacy==3.8.7
+smart-open==6.4.0
+spacy==3.5.0
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 sqlparse==0.5.3
 srsly==2.5.1
 sympy==1.14.0
-thinc==8.3.6
+thinc==8.1.7
 tiktoken==0.9.0
 tokenizers==0.13.3
 torch==2.2.2
 torchaudio==2.2.2
 torchvision==0.17.2
 tqdm==4.67.1
-transformers==4.30.0
-typer==0.15.4
+transformers==4.29.2
+typer==0.7.0
 typing-inspection==0.4.1
 typing_extensions==4.13.2
 urllib3==2.4.0
