--- a/gateway/ai_service/requirements.txt
+++ b/gateway/ai_service/requirements.txt
@@ -21,6 +21,7 @@ hf-xet==1.1.2
 huggingface-hub==0.32.0
 idna==3.10
 Jinja2==3.1.6
+joblib==1.4.2
 langcodes==3.5.0
 language_data==1.3.0
 llvmlite==0.44.0
