--- a/gateway/ai_service/requirements.txt
+++ b/gateway/ai_service/requirements.txt
@@ -1,28 +1,26 @@
+accelerate==1.7.0
 annotated-types==0.7.0
 asgiref==3.8.1
-blis==0.7.11
+blis==1.3.0
 catalogue==2.0.10
 certifi==2025.4.26
 charset-normalizer==3.4.2
-click==8.1.8
+click==8.2.1
 cloudpathlib==0.21.1
 confection==0.1.5
 cymem==2.0.11
 Django==5.2.1
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl#sha256=0964370218b7e1672a30ac50d72cdc6b16f7c867496f1d60925691188f4d2510
 en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl#sha256=5e6329fe3fecedb1d1a02c3ea2172ee0fede6cea6e4aefb6a02d832dba78a310
-fasttext-wheel==0.9.2
-ffmpeg-python==0.2.0
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
 filelock==3.18.0
 fsspec==2025.5.1
-future==1.0.0
 hf-xet==1.1.2
-huggingface-hub==0.32.0
+huggingface-hub==0.32.2
 idna==3.10
 Jinja2==3.1.6
-joblib==1.4.2
+joblib==1.5.1
 langcodes==3.5.0
 language_data==1.3.0
 llvmlite==0.44.0
@@ -35,15 +33,26 @@ mpmath==1.3.0
 murmurhash==1.0.13
 networkx==3.4.2
 numba==0.61.2
-numpy==1.26.4
-openai-whisper @ git+https://github.com/openai/whisper.git@dd985ac4b90cafeef8712f2998d62c59c3e62d22
+numpy==2.2.6
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.5.1.17
+nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.6.3
+nvidia-nccl-cu12==2.26.2
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.6.77
+openai-whisper==20240930
 packaging==25.0
-pathlib_abc==0.1.1
-pathy==0.11.0
-pillow==11.2.1
-preshed==3.0.9
-pybind11==2.13.6
-pydantic==1.10.22
+preshed==3.0.10
+psutil==7.0.0
+pydantic==2.11.5
 pydantic_core==2.33.2
 Pygments==2.19.1
 PyYAML==6.0.2
@@ -51,31 +60,29 @@ regex==2024.11.6
 requests==2.32.3
 rich==14.0.0
 safetensors==0.5.3
-sentencepiece==0.2.0
+scikit-learn==1.6.1
+scipy==1.15.3
+setuptools==80.9.0
 shellingham==1.5.4
-six==1.17.0
-smart-open==6.4.0
-spacy==3.5.0
+smart-open==7.1.0
+spacy==3.8.7
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 sqlparse==0.5.3
 srsly==2.5.1
 sympy==1.14.0
-thinc==8.1.7
+thinc==8.3.6
+threadpoolctl==3.6.0
 tiktoken==0.9.0
-tokenizers==0.13.3
-torch==2.2.2
-torchaudio==2.2.2
-torchvision==0.17.2
+tokenizers==0.21.1
+torch==2.7.0
 tqdm==4.67.1
-transformers==4.29.2
-typer==0.7.0
+transformers==4.52.3
+triton==3.3.0
+typer==0.16.0
 typing-inspection==0.4.1
 typing_extensions==4.13.2
 urllib3==2.4.0
 wasabi==1.1.3
 weasel==0.4.1
-wrapt==1.17.2
-pandas
-scikit-learn
-datasets
+wrapt==1.17.2x
